--- a/contracts/rust/Cargo.toml
+++ b/contracts/rust/Cargo.toml
@@ -7,14 +7,18 @@ edition = "2018"
 doctest = false
 
 [dependencies]
+commit = { git = "ssh://git@github.com/SpectrumXYZ/commit.git", rev = "f48cd52c59755eade0605111826eef3df6abdcf8" }
 jf-plonk = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git" }
 jf-primitives = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git" }
 jf-aap = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish-apps.git", rev = "eca7b7e85718c7770c24ad90dd34b8a07209a01b" }
 jf-rescue = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git" }
 jf-utils = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git" }
+key-set = { git = "ssh://git@github.com/SpectrumXYZ/key-set.git" }
 reef = { git = "ssh://git@github.com/SpectrumXYZ/reef.git", rev = "6e3e7f683d2f8c1c1da662301f8ca8c2863018cc" }
 universal-param = { git = "ssh://git@github.com/SpectrumXYZ/universal-param.git" }
-zerok_lib = { git = "ssh://git@github.com/SpectrumXYZ/spectrum.git", rev = "a1af8c87e5f5546b60dbd455dffa20ff211629c8", features = ["mocks"] }
+zerok-macros = { git = "ssh://git@github.com/SpectrumXYZ/zerok-macros.git" }
+arbitrary = { version="1.0", features=["derive"] }
+arbitrary-wrappers = { git = "ssh://git@github.com/SpectrumXYZ/arbitrary-wrappers.git" }
 ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
 itertools = "0.10.1" # needed for jf-aap to compile
 ark-std = "0.3.0"
@@ -41,6 +45,7 @@ async-trait = "0.1.51"
 futures = "0.3.16"
 strum_macros = "0.20.1"
 async-recursion = "1.0.0"
+snafu = { version = "0.7", features = ["backtraces"] }
 
 # copied from jellyfish
 [dependencies.ark-poly-commit]
