--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -12,6 +12,7 @@ default-run = "cape_wallet"
 
 [dependencies]
 async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
+async-trait = "0.1.51"
 bincode = "1.3.3"
 cap-rust-sandbox = { path = "../contracts/rust" }
 futures = "0.3.0"
@@ -27,7 +28,7 @@ markdown = "0.3"
 net = { git = "ssh://git@github.com/SpectrumXYZ/net.git" }
 rand_chacha = "0.3.1"
 reef = { git = "ssh://git@github.com/SpectrumXYZ/reef.git", rev = "6e3e7f683d2f8c1c1da662301f8ca8c2863018cc" }
-seahorse = { git = "ssh://git@github.com/SpectrumXYZ/seahorse.git" }
+seahorse = { git = "ssh://git@github.com/SpectrumXYZ/seahorse.git", features = ["testing"] }
 serde = { version = "1.0.123", features = ["derive", "rc"] }
 serde_derive = "1.0.118"
 serde_json = "1.0.61"
@@ -46,7 +47,6 @@ tracing-distributed = "0.3.1"
 tracing-futures = "0.2"
 tracing-subscriber = "0.2.19"
 universal-param = { git = "ssh://git@github.com/SpectrumXYZ/universal-param.git" }
-zerok_lib = { git = "ssh://git@github.com/SpectrumXYZ/spectrum.git", rev = "a1af8c87e5f5546b60dbd455dffa20ff211629c8", features = ["mocks"] }
 
 [dev-dependencies]
 surf = "2.3.2"
