--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -11,10 +11,11 @@ atomic_store = { version="0.0.2", registry="translucence" }
 bincode = "1.3.3"
 cap-rust-sandbox = { path = "../contracts/rust" }
 dirs = "4.0"
-# may switch to `ethers = "0.6.2"` in the future; keeping this for compatibility for now
-ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
 
 jf-aap = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish-apps.git", rev = "fd1de050c214584a296a11f366846a53a316c4d4" }
+# may switch to `ethers = "0.6.2"` in the future; keeping this for compatibility for now
+# temporarily pin a revision since master is broken
+ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "b619a5522f4aa814f56599d7be8463bca12c23fa", features = ["abigen"] }
 jf-primitives = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git" }
 key-set = { git = "ssh://git@github.com/SpectrumXYZ/key-set.git" }
 
