--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -15,6 +15,7 @@ async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
 async-trait = "0.1.51"
 bincode = "1.3.3"
 cap-rust-sandbox = { path = "../contracts/rust" }
+escargot = "0.5.2"
 futures = "0.3.0"
 futures-util = "0.3.8"
 itertools = "0.10.1"
@@ -28,7 +29,8 @@ markdown = "0.3"
 net = { git = "ssh://git@github.com/SpectrumXYZ/net.git" }
 rand_chacha = "0.3.1"
 reef = { git = "ssh://git@github.com/SpectrumXYZ/reef.git", rev = "6e3e7f683d2f8c1c1da662301f8ca8c2863018cc" }
-seahorse = { git = "ssh://git@github.com/SpectrumXYZ/seahorse.git", features = ["testing"] }
+regex = "1.5.4"
+seahorse = { path = "/Users/keyao/Code/seahorse", features = ["testing"] }
 serde = { version = "1.0.123", features = ["derive", "rc"] }
 serde_derive = "1.0.118"
 serde_json = "1.0.61"
@@ -37,6 +39,7 @@ snafu = { version = "0.7", features = ["backtraces"] }
 structopt = { version = "0.3", features = ["paw"] }
 strum = "0.20"
 strum_macros = "0.20.1"
+surf = "2.3.1"
 tagged-base64 = { git = "ssh://git@github.com/SpectrumXYZ/tagged-base64.git", branch = "main" }
 tempdir = "0.3.7"
 tide = "0.16.0"
