--- a/wallet/api/api.toml
+++ b/wallet/api/api.toml
@@ -140,24 +140,24 @@ PATH = [
   # Only if `tracekey` is given, can `traceamount`, `traceaddress` and `revealthreshold` be specified.
 
   # Paths for asset sponsor.
-  "newasset/erc20/:erc20/issuer/:issuer/freezekey/:freeze_key/tracekey/:trace_key/traceamount/:trace_amount/traceaddress/:trace_address/revealthreshold/:reveal_threshold",
-  "newasset/erc20/:erc20/issuer/:issuer/freezekey/:freeze_key/tracekey/:trace_key/traceamount/:trace_amount/traceaddress/:trace_address",
-  "newasset/erc20/:erc20/issuer/:issuer/freezekey/:freeze_key/tracekey/:trace_key/traceamount/:trace_amount/revealthreshold/:reveal_threshold",
-  "newasset/erc20/:erc20/issuer/:issuer/freezekey/:freeze_key/tracekey/:trace_key/traceamount/:trace_amount",
-  "newasset/erc20/:erc20/issuer/:issuer/freezekey/:freeze_key/tracekey/:trace_key/traceaddress/:trace_address/revealthreshold/:reveal_threshold",
-  "newasset/erc20/:erc20/issuer/:issuer/freezekey/:freeze_key/tracekey/:trace_key/traceaddress/:trace_address",
-  "newasset/erc20/:erc20/issuer/:issuer/freezekey/:freeze_key/tracekey/:trace_key/revealthreshold/:reveal_threshold",
-  "newasset/erc20/:erc20/issuer/:issuer/freezekey/:freeze_key/tracekey/:trace_key",
-  "newasset/erc20/:erc20/issuer/:issuer/freezekey/:freeze_key",
-  "newasset/erc20/:erc20/issuer/:issuer/tracekey/:trace_key/traceamount/:trace_amount/traceaddress/:trace_address/revealthreshold/:reveal_threshold",
-  "newasset/erc20/:erc20/issuer/:issuer/tracekey/:trace_key/traceamount/:trace_amount/traceaddress/:trace_address",
-  "newasset/erc20/:erc20/issuer/:issuer/tracekey/:trace_key/traceamount/:trace_amount/revealthreshold/:reveal_threshold",
-  "newasset/erc20/:erc20/issuer/:issuer/tracekey/:trace_key/traceamount/:trace_amount",
-  "newasset/erc20/:erc20/issuer/:issuer/tracekey/:trace_key/traceaddress/:trace_address/revealthreshold/:reveal_threshold",
-  "newasset/erc20/:erc20/issuer/:issuer/tracekey/:trace_key/traceaddress/:trace_address",
-  "newasset/erc20/:erc20/issuer/:issuer/tracekey/:trace_key/revealthreshold/:reveal_threshold",
-  "newasset/erc20/:erc20/issuer/:issuer/tracekey/:trace_key",
-  "newasset/erc20/:erc20/issuer/:issuer",
+  "newasset/erc20/:erc20/sponsor/:sponsor/freezekey/:freeze_key/tracekey/:trace_key/traceamount/:trace_amount/traceaddress/:trace_address/revealthreshold/:reveal_threshold",
+  "newasset/erc20/:erc20/sponsor/:sponsor/freezekey/:freeze_key/tracekey/:trace_key/traceamount/:trace_amount/traceaddress/:trace_address",
+  "newasset/erc20/:erc20/sponsor/:sponsor/freezekey/:freeze_key/tracekey/:trace_key/traceamount/:trace_amount/revealthreshold/:reveal_threshold",
+  "newasset/erc20/:erc20/sponsor/:sponsor/freezekey/:freeze_key/tracekey/:trace_key/traceamount/:trace_amount",
+  "newasset/erc20/:erc20/sponsor/:sponsor/freezekey/:freeze_key/tracekey/:trace_key/traceaddress/:trace_address/revealthreshold/:reveal_threshold",
+  "newasset/erc20/:erc20/sponsor/:sponsor/freezekey/:freeze_key/tracekey/:trace_key/traceaddress/:trace_address",
+  "newasset/erc20/:erc20/sponsor/:sponsor/freezekey/:freeze_key/tracekey/:trace_key/revealthreshold/:reveal_threshold",
+  "newasset/erc20/:erc20/sponsor/:sponsor/freezekey/:freeze_key/tracekey/:trace_key",
+  "newasset/erc20/:erc20/sponsor/:sponsor/freezekey/:freeze_key",
+  "newasset/erc20/:erc20/sponsor/:sponsor/tracekey/:trace_key/traceamount/:trace_amount/traceaddress/:trace_address/revealthreshold/:reveal_threshold",
+  "newasset/erc20/:erc20/sponsor/:sponsor/tracekey/:trace_key/traceamount/:trace_amount/traceaddress/:trace_address",
+  "newasset/erc20/:erc20/sponsor/:sponsor/tracekey/:trace_key/traceamount/:trace_amount/revealthreshold/:reveal_threshold",
+  "newasset/erc20/:erc20/sponsor/:sponsor/tracekey/:trace_key/traceamount/:trace_amount",
+  "newasset/erc20/:erc20/sponsor/:sponsor/tracekey/:trace_key/traceaddress/:trace_address/revealthreshold/:reveal_threshold",
+  "newasset/erc20/:erc20/sponsor/:sponsor/tracekey/:trace_key/traceaddress/:trace_address",
+  "newasset/erc20/:erc20/sponsor/:sponsor/tracekey/:trace_key/revealthreshold/:reveal_threshold",
+  "newasset/erc20/:erc20/sponsor/:sponsor/tracekey/:trace_key",
+  "newasset/erc20/:erc20/sponsor/:sponsor",
 
   # Paths for asset definition with a given description.
   "newasset/description/:description/freezekey/:freeze_key/tracekey/:trace_key/traceamount/:trace_amount/traceaddress/:trace_address/revealthreshold/:reveal_threshold",
@@ -201,7 +201,7 @@ PATH = [
 ]
 ":erc20" = "TaggedBase64"
 ":description" = "TaggedBase64"
-":issuer" = "TaggedBase64"
+":sponsor" = "TaggedBase64"
 ":freeze_key" = "TaggedBase64"
 ":trace_key" = "TaggedBase64"
 ":trace_amount" = "Boolean"
